--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+= 0.9.2
+  - fixed a problem with navigation; enhanced css
+  - deployment task
+
+
 = 0.9.1
 Released at 2008-12-18
   - task to install the Rails-portlet
