--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+  - version to navigation view
+  - comply link_to_exit_portlet with link_to api
+
+
 = 0.9.6
   - added some tables and a notice to sequence migrations
   - no longer installs css and javascript files, everything is cramped inline into the view
