--- a/README
+++ b/README
@@ -1,21 +1,37 @@
 Caterpillar helps you with building Rails applications to be used in Java
 JSR286 portlets. This is possible with the help of Rails-portlet[http://rails-portlet.rubyforge.org].
 
-Rails portlets have been used on Liferay and the helpers offer specialized methods to support better Liferay integration.
+Writing Rails portlets for Liferay is great fun!
+Caterpillar tasks offer specialized methods for better Liferay integration:
 
-This package offers these functionalities:
-
+++xml++ and ++xml:deploy++
  - processes the portlet XML configuration in accordance with the named routes
 See Caterpillar::Config
 
+++jar:install++
+ - installs the Rails-portlet JAR into Liferay's classpath
+
+++deploy++
+ - warbles the application, updates the XML configuration and copies these to Liferay
+
+++pluginize++
  - provides a navigation view in development (you will have to enable it manually)
 See Caterpillar::Navigation
 
+++db:migrate++
  - offers a set of migrations to help with Liferay integration
 
- - provides a Rake task 'fixtures', which imports live data
-   from the production database for testing
+ - patches Web::Portlet in the lportal[http://lportal.rubyforge.org] library, so manipulating
+   portlets is easier. This requires running the migrations.
+
+++fixtures++
+ - imports live data from the production database for testing
 
 
+See the rdoc documentation and caterpillar --describe for the full feature list.
 
-See the rdoc documentation and caterpillar --describe for the feature list.
+
+Caterpillar is open source! Patches and comments are welcome.
+Join the bugs mailing list (http://rubyforge.org/mailman/listinfo/rails-portlet-bugs) to request help.
+
+Caterpillar is written by Mikael Lammentausta for Cel'Amanzi Ltd.
