--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-
+	- add role definitions; all portlets are only addable by admin
+	- define control panel category in Liferay 5.2
+	
 = 0.9.16
 	- fixed undefined RAILS_ROOT bug
 	- cleaned out unused JARs; the gem is now smaller
