--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+= 1.0.2
+	- support for installing on JBoss/Tomcat
+	- refined the Liferay variable detection test
+	- cleanup
+
 = 1.0.1
 	- added test for liferay session variables
 	- fixed XML validation error on 5.2.3 (all portlets are now uninstanceable)
