--- a/README.rdoc
+++ b/README.rdoc
@@ -59,28 +59,14 @@ Here are the most useful tasks; see the rdoc documentation and caterpillar --des
 
 <tt>xml:deploy</tt>::  deploys the created XML to the J2EE portlet container 
 
-++jar:install++
- - installs the Rails-portlet JAR into Liferay's classpath
+<tt>jar:install</tt>: installs the Rails-portlet JAR into Liferay's classpath
 
-++deploy++
- - warbles the application, updates the XML configuration and copies these to Liferay
+<tt>deploy</tt>: warbles the application, updates the XML configuration and copies these to Liferay
 
-++pluginize++
- - provides a navigation view in development (you will have to enable it manually).
-   See Caterpillar::Navigation
- - includes the portlet test bench
+<tt>pluginize</tt>: copies caterpillar to vendor/plugins
 
-++db:migrate++ and ++db:update++
- - offers a set of migrations to help with Liferay integration
-
- - patches Web::Portlet in the lportal[http://lportal.rubyforge.org] library, so manipulating
-   portlets is easier. This requires running the migrations.
-
-++fixtures++
- - imports live data from the production database for testing
+<tt>fixtures</tt>: imports live data from the production database for testing
 
 
-
-Caterpillar is open source! Patches and comments are welcome.
 Join the bugs mailing list (http://rubyforge.org/mailman/listinfo/rails-portlet-bugs) to request help.
 
