--- a/README.rdoc
+++ b/README.rdoc
@@ -59,13 +59,13 @@ Here are the most useful tasks; see the rdoc documentation and caterpillar --des
 
 <tt>xml:deploy</tt>::  deploys the created XML to the J2EE portlet container 
 
-<tt>jar:install</tt>: installs the Rails-portlet JAR into Liferay's classpath
+<tt>jar:install</tt>:: installs the Rails-portlet JAR into Liferay's classpath
 
-<tt>deploy</tt>: warbles the application, updates the XML configuration and copies these to Liferay
+<tt>deploy</tt>:: warbles the application, updates the XML configuration and copies these to Liferay
 
-<tt>pluginize</tt>: copies caterpillar to vendor/plugins
+<tt>pluginize</tt>:: copies caterpillar to vendor/plugins
 
-<tt>fixtures</tt>: imports live data from the production database for testing
+<tt>fixtures</tt>:: imports live data from the production database for testing
 
 
 Join the bugs mailing list (http://rubyforge.org/mailman/listinfo/rails-portlet-bugs) to request help.
