--- a/README.rdoc
+++ b/README.rdoc
@@ -3,6 +3,13 @@ This is possible with the help of Rails-portlet[http://rails-portlet.rubyforge.o
 
 The aim is to minimize the needed additions to the Rails framework and interfere with the developer workflow.
 
+Main features:
+
+<tt>dynamic portlet XML creation</tt>
+<tt>portlet session security mechanism</tt>
+<tt>Rails-portlet JAR install command</tt>
+<tt>list of portlets during development</tt>
+
 The command-line tool <tt>caterpillar</tt> should be executed in the Rails project root directory.
 You can install and upgrade the <tt>rails-portlet</tt> JAR and generate dynamic portlet XML and also
 deploy them. See the task description below - and you can also run <tt>caterpillar --describe</tt>.
