--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+= 1.3.0
+	- A new helper to generate resource urls (download)
+	- Modifications on portlet-ext.xml (new filter and RESOURCE_PHASE)
+
 = 1.2.4
 	- use standalone Rails defaults in the installed config file
 	- updated xUnit tests in the portlet test bench
