--- a/README.rdoc
+++ b/README.rdoc
@@ -88,3 +88,17 @@ Here are the most useful tasks; see the rdoc documentation and caterpillar --des
 
 Join the bugs mailing list (http://rubyforge.org/mailman/listinfo/rails-portlet-bugs) to request help.
 
+== Implementing File Download with Caterpillar
+
+In order to use download links on your webpages, you need to use method send_file(filePath, :filename=>"fileName") , in which the parameter filePath represents the location of the file, and fileName represents the name of the file. 
+
+For example, on DownloadController, 'start()' method allows the download of 'image.jpg' file.     
+  def start
+    send_file('../images/image.jpg', :filename=>"image.jpg")
+  end
+
+In your webpage, you should use the following method which will manage your urls:
+  liferay_resource_url(:controller=> :download, :action=> :start) 
+
+It should look like: 
+  <%= link_to "Download", liferay_resource_url(:controller=>:download , :action=>:start) %>
