--- a/README.rdoc
+++ b/README.rdoc
@@ -20,7 +20,7 @@ For developers:
 Rubygems does not seem to get the most uptodate version. The release should be >= 1.2.3.
 Please download the latest release from Rubyforge.
 
-  $ gem install caterpillar-1.2.3.gem
+  $ gem install caterpillar-1.3.0.gem
 
 Start up a new Rails project:
 
@@ -91,16 +91,16 @@ Join the bugs mailing list (http://rubyforge.org/mailman/listinfo/rails-portlet-
 == How to implement File Download
 
 In order to use download links in your webpages, you need to use method 
-  send_file(filePath, :filename=>"fileName")
+  send_file(file_path, :filename=>"filename")
 in which the parameter filePath represents the location of the file, and fileName represents the name of the file. 
 
 For example, on DownloadController, 'start()' method allows the download of 'image.jpg' file.     
   def start
-    send_file('../images/image.jpg', :filename=>"image.jpg")
+    send_file('../images/image.jpg', :filename => "image.jpg")
   end
 
 In your webpage, you should use the following method which will manage your urls:
   liferay_resource_url(:controller=> :controllerName, :action=> :methodName) 
 
 It should look like: 
-  <%= link_to "Download", liferay_resource_url(:controller=>:download , :action=>:start) %>
+  <%= link_to "Download", liferay_resource_url(:controller => :download , :action => :start) %>
