--- a/README.rdoc
+++ b/README.rdoc
@@ -28,13 +28,16 @@ Start up a new Rails project:
   $ cd example
   $ caterpillar pluginize
 
-Caterpillar contains Rails portlet test bench, which can be activated by inserting 
-+map.caterpillar+ in RAILS_ROOT/config/routes.rb before any other routes.
+Activate Caterpillar routes by updating <tt>RAILS_ROOT/config/routes.rb</tt> to read as follows:
 
-This route mapping is also needed to use portlet security features to prevent UID faking.
-ApplicationController also needs to have:
-  include Caterpillar::Security
-  secure_portlet_sessions
+  ActionController::Routing::Routes.draw do |map|
+    map.caterpillar # add this line
+    # ... other routes ...
+
+This route mapping is also needed to use portlet security features to prevent UID faking. Update <tt>ApplicationController</tt>:
+  class ApplicationController < ActionController::Base
+    include Caterpillar::Security
+    secure_portlet_sessions
 
 If you are connecting to the Liferay database, add +require 'lportal'+ in the Rails startup:
   $ echo "require 'lportal'" > config/initializers/lportal.rb
