--- a/README.rdoc
+++ b/README.rdoc
@@ -39,18 +39,18 @@ This route mapping is also needed to use portlet security features to prevent UI
     include Caterpillar::Security
     secure_portlet_sessions
 
-If you are connecting to the Liferay database, add +require 'lportal'+ in the Rails startup:
+If you are connecting to the Liferay database, add lportal[http://lportal.rubyforge.org/] in the Rails startup:
   $ echo "require 'lportal'" > config/initializers/lportal.rb
-And set up the database connection. See [http://lportal.rubyforge.org/]
+And set up the database connection.
 
-Now you should run +caterpillar portlets+ to check if your installation is working.
+Now run <tt>caterpillar portlets</tt> to check if the installation is working.
 The output should include these lines:
 
   * Portlet configuration ***********************
   Caterpillar
     Rails-portlet test bench      "portlet_test_bench"  []
 
-Then you can start up the server (./script/server) and navigate to http://localhost:3000/caterpillar/test_bench
+Then you can start up the server (<tt>./script/server</tt>) and navigate to http://localhost:3000/caterpillar/test_bench
 
 
 == Good to know
