--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 = 1.3.0
-	- A new helper to generate resource urls (download)
+	- New helpers to generate resource urls (download) and get_liferay_preferences, to get the preferences
+	- edit_mode and instanceable working on portlet configuration
 	- Modifications on portlet-ext.xml (new filter and RESOURCE_PHASE)
 
 = 1.2.4
