--- a/README.rdoc
+++ b/README.rdoc
@@ -16,11 +16,23 @@ For developers:
 * a Rails view helper which lists portlets during development
 
 
-== Quickstart
-Rubygems does not seem to get the most uptodate version. The release should be >= 1.3.0.
-Please download the latest release from Rubyforge.
+= Quickstart
+== The new path
+You'll need at least the version 1.3.0.
 
   $ gem install caterpillar-1.3.0.gem
+
+Start up a new Rails project:
+
+  $ caterpillar rails example
+
+It's all you need =].
+
+== The old way
+Rubygems does not seem to get the most uptodate version. The release should be >= 1.2.3.
+Please download the latest release from Rubyforge.
+
+  $ gem install caterpillar-1.2.3.gem
 
 Start up a new Rails project:
 
