--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+	- rename xml task to makexml, and call it with deploy:xml
+	- many small fixes to various tasks
+	- XML is validated with Liferay DTD and portlet-app XSD
+	- silence deprecation warnings from Rails gem chooser
+
 = 1.3.0
 	- New helpers to generate resource urls (download) and get_liferay_preferences, to get the preferences
 	- edit_mode and instanceable working on portlet configuration
