--- a/README.rdoc
+++ b/README.rdoc
@@ -164,7 +164,7 @@ This module will provide <b>get_liferay_preferences</b> method which returns the
 
   end
 
-In your erb file you will have a form like this, where each attribute (that has to be saved) needs to have prefix <b>_preference</b> on its name. For example:
+In your erb file you will have a form like this, where each attribute (that has to be saved) needs to have sufix <b>_preference</b> on its name. For example:
   <% form_tag :controller => :test , :action => :preferences do %>
     <p>
       Cor de fundo: <%= text_field_tag :background_color_preference, @preferences[:background_color_preference] %>
@@ -180,20 +180,20 @@ In your erb file you will have a form like this, where each attribute (that has 
 
 == Public Render Parameters
 
-To enable public parameters to your portlets, you must create the array <em>public_render_parameters</em>,in your <em>portlets.rb</em> instance configuration, where you will add the public variables (in our example, <em>param1</em> and <em>param2</em>). 
+To enable public parameters to your portlets, you must create the array <b>public_render_parameters</b>, in your <em>portlets.rb</em> instance configuration, where you will add the public variables (in our example, <b>param1</b> and <b>param2</b>). 
   portlet.instances << {   
     :name => 'home',
     :public_render_parameters => [:param1, :param2]
   }
 
-In your erb file, for each public parameter, you must use the sufix <em>_prp</em> . For example, to use the public variable <em>param1</em> in a textfield: 
+In your erb file, for each public parameter, you must use the sufix <b>_prp</b> in it's name . For example, to use the public variable param1 in a textfield: 
   	<%= text_field_tag :param1_prp, '' %>
 
 
 <b> Watch it! </b> 
-* You should <b>not</b> use the sufix <em>_prp</em> in <em>portlet.erb</em>. 
+* You should <b>not</b> use the sufix <b>_prp</b> in <em>portlet.erb</em>. 
 * You must use the public render parameters in your erb file, <b>in a form</b>, using POST method. [It has to go through processAction]
-* Even if you've got only one variable to add to <em>public_render_parameters</em>, you <b>have</b> to use the brackets. 
+* Even if you've got only one variable to add to <em>public_render_parameters</em>, you <b>have</b> to use the brackets.
   portlet.instances << {   
 	  :name => 'home',
 	  :public_render_parameters => [:param1]
