--- a/README.rdoc
+++ b/README.rdoc
@@ -187,13 +187,13 @@ To enable public parameters to your portlets, you must create the array <b>publi
   }
 
 In your erb file, for each public parameter, you must use the sufix <b>_prp</b> in it's name . For example, to use the public variable param1 in a textfield: 
-  	<%= text_field_tag :param1_prp, '' %>
+  <%= text_field_tag :param1_prp, '' %>
 
 
 <b> Watch it! </b> 
 * You should <b>not</b> use the sufix <b>_prp</b> in <em>portlet.erb</em>. 
 * You must use the public render parameters in your erb file, <b>in a form</b>, using POST method. [It has to go through processAction]
-* Even if you've got only one variable to add to <em>public_render_parameters</em>, you <b>have</b> to use the brackets.
+* Even if you've got only one variable to add to <b>public_render_parameters</b>, you <b>have</b> to use the brackets.
   portlet.instances << {   
     :name => 'home',
     :public_render_parameters => [:param1, :param2]
