--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+= 1.3.2
+	- Adding public render parameters, to control liferay portlets
+	- Fixing a bug in edit_mode that caused the "rails-portlet" received 404 to access the method preferences
+	- New preferences_route option for portlet, allowing the route configuration
+	- Some small fixes and improvements
+	
 = 1.3.1
 	- rename xml task to makexml, and call it with deploy:xml
 	- many small fixes to various tasks
@@ -7,7 +13,8 @@
 = 1.3.0
 	- New helpers to generate resource urls (download) and get_liferay_preferences, to get the preferences
 	- edit_mode and instanceable working on portlet configuration
-	- Modifications on portlet-ext.xml (new filter and RESOURCE_PHASE)
+	- Modifications on portlet-ext.xml (new filter and RESOURCE_PHASE) 
+	- The new task rails (caterpillar rails project_name)
 
 = 1.2.5
 	- Ruby 1.9 compatibility fix
