--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+= 1.4.4
+	- XML fixes
+	- added /caterpillar view
+
 = 1.4.3
 	- regression fix for XML format; Liferay is very picky about newlines
 
